// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prepare 支持解析对象请求体: 对象 1`] = `
Object {
  "allData": Object {
    "a": 1,
    "b": "2",
  },
  "data": Object {
    "a": 1,
    "b": "2",
  },
  "fileData": Object {},
  "getFormData": [Function getFormData],
  "hasFileData": false,
  "path": "/test",
  "rawData": Object {
    "a": 1,
    "b": "2",
  },
}
`;

exports[`prepare 支持解析带参路径: 路径参数 1 1`] = `
Object {
  "allData": Object {
    "b": "2",
  },
  "data": Object {
    "b": "2",
  },
  "fileData": Object {},
  "getFormData": [Function getFormData],
  "hasFileData": false,
  "paramNames": Array [
    "a",
    "id",
  ],
  "path": "/test/1/110",
  "rawData": Object {
    "a": 1,
    "b": "2",
    "id": 110,
  },
}
`;

exports[`prepare 支持解析带参路径: 路径参数 2 1`] = `
Object {
  "allData": Object {
    "b": "2",
  },
  "data": Object {
    "b": "2",
  },
  "fileData": Object {},
  "getFormData": [Function getFormData],
  "hasFileData": false,
  "paramNames": Array [
    "a",
    "id",
  ],
  "path": "/test/a_1/id_110",
  "rawData": Object {
    "a": 1,
    "b": "2",
    "id": 110,
  },
}
`;

exports[`prepare 支持解析带参路径: 路径参数 3 - 全部替换 1`] = `
Object {
  "allData": Object {
    "b": "2",
  },
  "data": Object {
    "b": "2",
  },
  "fileData": Object {},
  "getFormData": [Function getFormData],
  "hasFileData": false,
  "paramNames": Array [
    "a",
    "id",
  ],
  "path": "/test/a_1/id_110/id_110",
  "rawData": Object {
    "a": 1,
    "b": "2",
    "id": 110,
  },
}
`;

exports[`prepare 支持解析非对象请求体: 布尔值 1`] = `
Object {
  "allData": Object {},
  "data": true,
  "fileData": Object {},
  "getFormData": [Function getFormData],
  "hasFileData": false,
  "path": "/test",
  "rawData": true,
}
`;

exports[`prepare 支持解析非对象请求体: 数组 1`] = `
Object {
  "allData": Object {},
  "data": Array [
    1,
    2,
    3,
    Object {
      "x": false,
    },
  ],
  "fileData": Object {},
  "getFormData": [Function getFormData],
  "hasFileData": false,
  "path": "/test",
  "rawData": Array [
    1,
    2,
    3,
    Object {
      "x": false,
    },
  ],
}
`;

exports[`prepare 支持追加查询参数 1`] = `
Object {
  "allData": Object {
    "b": "2",
  },
  "data": Object {
    "b": "2",
  },
  "fileData": Object {},
  "getFormData": [Function getFormData],
  "hasFileData": false,
  "path": "/search?a=1&id=110",
  "queryNames": Array [
    "a",
    "id",
  ],
  "rawData": Object {
    "a": 1,
    "b": "2",
    "id": 110,
  },
}
`;
